messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django
      version: blue
  template:
    metadata:
      labels:
        app: django
        version: blue
    spec:
      containers:
        - name: django-container
          image: your-django-image:2.0  # ← Update to version 2.0
          ports:
            - containerPort: 8000
