messaging_app/messaging_app/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: django.local  # <-- For Minikube, use /etc/hosts to map this to minikube IP
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: django-messaging-service
                port:
                  number: 80
